--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PC\AppData\Local\Temp\testng-eclipse-1950436378\testng-customsuite.xml</span>
+                    <span>C:\Users\PC\AppData\Local\Temp\testng-eclipse-417414834\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,11 +101,6 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.stepdefinition.steprunner$Testrunner" class="method navigator-link" hash-for-method="runScenario(&quot;user searches for samsung galaxy m21&quot;, &quot;User should be able to login&quot;)">runScenario("user searches for samsung galaxy m21", "User should be able to login")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.stepdefinition.steprunner$Testrunner" class="method navigator-link" hash-for-method="runScenario(&quot;user is checking elements in cart&quot;, &quot;User should be able to login&quot;)">runScenario("user is checking elements in cart", "User should be able to login")</a> <!-- method navigator-link -->
@@ -131,16 +126,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;user searches for samsung galaxy m21&quot;, &quot;User should be able to login&quot;)">
-                  </a> <!-- runScenario("user searches for samsung galaxy m21", "User should be able to login") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("user searches for samsung galaxy m21","User should be able to login")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="runScenario(&quot;user is checking elements in cart&quot;, &quot;User should be able to login&quot;)">
                   </a> <!-- runScenario("user is checking elements in cart", "User should be able to login") -->
                   <span class="method-name">runScenario</span>
@@ -154,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PC\AppData\Local\Temp\testng-eclipse-1950436378\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PC\AppData\Local\Temp\testng-eclipse-417414834\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -211,20 +196,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.stepdefinition.steprunner$Testrunner')
-data.setCell(0, 3, 55570);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'com.stepdefinition.steprunner$Testrunner')
-data.setCell(1, 3, 18219);
+data.setCell(0, 3, 45849);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 45 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -252,20 +233,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.stepdefinition.steprunner$Testrunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@51d719bc)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@429f7919)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("user searches for samsung galaxy m21", "User should be able to login")</span>
-                <span class="method-start">1092 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">runScenario("user is checking elements in cart", "User should be able to login")</span>
-                <span class="method-start">56669 ms</span>
+                <span class="method-start">799 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">74901 ms</span>
+                <span class="method-start">46653 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
