--- a/ExtentListenerReportDemo1.html
+++ b/ExtentListenerReportDemo1.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Extent Listener Report Demo</title>
+<title>Extent Listener Report</title>
 <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
 <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
 <link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@d6562a79075e061305ccfdb82f01e5e195e2d307/spark/css/spark-style.css" rel="stylesheet" />
@@ -32,10 +32,10 @@
 </ul>
 <ul class="nav-right">
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">This is my first Report</span></a>
+<a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 10, 2025 08:26:45 AM</span></a>
+<a href="#"><span class="badge badge-primary">Nov 14, 2025 08:14:59 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">runScenario</p>
             <p class="text-sm">
-              <span>8:26:46 AM</span> / <span>00:00:00:010</span>
+              <span>8:15:01 AM</span> / <span>00:00:10:674</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -90,23 +90,34 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">runScenario</h5>
-<span class='badge badge-success'>11.10.2025 8:26:46 AM</span>
-<span class='badge badge-danger'>11.10.2025 8:26:46 AM</span>
-<span class='badge badge-default'>00:00:00:010</span>
+<span class='badge badge-success'>11.14.2025 8:15:01 AM</span>
+<span class='badge badge-danger'>11.14.2025 8:15:11 AM</span>
+<span class='badge badge-default'>00:00:10:674</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
+</div>    <div class="row mb-3"><div class="col-md-3">
+<img data-featherlight='C:\Users\PC\eclipse-workspace\ebay\Screenshots\runScenario1763088310842.png' src="C:\Users\PC\eclipse-workspace\ebay\Screenshots\runScenario1763088310842.png">
+    
+    </div></div>
+<div class="detail-body mt-4">
 <table class="table table-sm">
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:26:46 AM</td>
+        <td>8:15:10 AM</td>
         <td>
-          <span class='badge white-text red'>Test case failed: runScenario</span>
+          <span class='badge white-text red'>FAIL: runScenario</span>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:15:11 AM</td>
+        <td>
+          Screenshot:com.aventstack.extentreports.ExtentTest@7c0777b5
         </td>
       </tr>
   </tbody>
@@ -121,7 +132,7 @@
           <div class="test-detail">
             <p class="name">runScenario</p>
             <p class="text-sm">
-              <span>8:26:46 AM</span> / <span>00:00:00:000</span>
+              <span>8:15:11 AM</span> / <span>00:00:07:542</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -130,23 +141,34 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">runScenario</h5>
-<span class='badge badge-success'>11.10.2025 8:26:46 AM</span>
-<span class='badge badge-danger'>11.10.2025 8:26:46 AM</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<span class='badge badge-success'>11.14.2025 8:15:11 AM</span>
+<span class='badge badge-danger'>11.14.2025 8:15:19 AM</span>
+<span class='badge badge-default'>00:00:07:542</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
+</div>    <div class="row mb-3"><div class="col-md-3">
+<img data-featherlight='C:\Users\PC\eclipse-workspace\ebay\Screenshots\runScenario1763088318749.png' src="C:\Users\PC\eclipse-workspace\ebay\Screenshots\runScenario1763088318749.png">
+    
+    </div></div>
+<div class="detail-body mt-4">
 <table class="table table-sm">
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:26:46 AM</td>
+        <td>8:15:18 AM</td>
         <td>
-          <span class='badge white-text red'>Test case failed: runScenario</span>
+          <span class='badge white-text red'>FAIL: runScenario</span>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>8:15:19 AM</td>
+        <td>
+          Screenshot:com.aventstack.extentreports.ExtentTest@4bcaa195
         </td>
       </tr>
   </tbody>
@@ -168,13 +190,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 10, 2025 08:26:45 AM</h3>
+<h3>Nov 14, 2025 08:14:59 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 10, 2025 08:26:47 AM</h3>
+<h3>Nov 14, 2025 08:15:19 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -227,7 +249,7 @@
 <div class="card-footer">
 <div><small data-tooltip='0%'><b>0</b> events passed</small></div>
 <div>
-<small data-tooltip='100%'><b>2</b> events failed,
+<small data-tooltip='100%'><b>4</b> events failed,
 <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -244,7 +266,7 @@
 </div></div>
 <script>
 var timeline = {
-"runScenario":0.01,"runScenario":0
+"runScenario":10.674,"runScenario":7.542
 };
 </script>
 <div class="row">
@@ -289,7 +311,7 @@ skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
 passEvents: 0,
-failEvents: 2,
+failEvents: 4,
 warningEvents: 0,
 skipEvents: 0,
 infoEvents: 0
